@@ -8,6 +8,7 @@ OpenLDAP 2.4.22 Engineering
 	Fixed slapd acl non-entry internal searches (ITS#6481)
 	Fixed slapd certificateListValidate (ITS#6466)
 	Fixed slapd empty URI parsing (ITS#6465)
+	Fixed slapd glued misplaced entries (ITS#6506)
 	Fixed slapd glued paged results (ITS#6504)
 	Fixed slapd ignore controls with unrecognized flags (ITS#6480)
 	Fixed slapd REP_ENTRY flag handling (ITS#5340)
